<resources>
    <string name="app_name">Light!</string>
    <string name="lb_sunset">Sunset:</string>
    <string name="lb_reading">Reading:</string>
    <string name="lb_lightsoff">Lights off:</string>
    <string name="chk_selall">All</string>
    <string name="lb_switch">Switch:</string>
    <string name="chk_active">Active</string>
    <string name="lb_pause">Pause:</string>
    <string name="lb_ip">IP:</string>
    <string name="btn_ready">Ready</string>
    <string name="lb_server">Server:</string>
    <string name="lb_network">Netw:</string>
    <string name="lb_ipaddress">IP address:</string>
    <string name="lb_port">Port:</string>
    <string name="lb_offperiod">Period (min):</string>
    <string name="lb_longitude">Longitude:</string>
    <string name="lb_latitude">Latitude:</string>
    <string name="hint_longitude">Longitude</string>
    <string name="hint_latitude">Latitude</string>
    <string name="lb_sequence">Seq. number:</string>
    <string name="lb_name">Name:</string>
    <string name="chk_button">Button</string>
    <string name="lb_treshold">Treshold:</string>
    <string name="lb_interval">Interval (sec):</string>
    <string name="lb_repeat">Repeat:</string>
    <string name="chk_manager">Manager</string>
    <string name="msg_unknown_group">Unknown group</string>
    <string name="title_location">Location</string>
    <string name="title_lightsoff">Lights Off</string>
    <string name="lb_starttime">Start Time:</string>
    <string name="title_lightsensor">Light Sensor</string>
    <string name="title_unknown">Unknown</string>
    <string name="msg_emptyserver">Servername cannot be empty!</string>
    <string name="msg_duplicateserver">Servername already exists!</string>
    <string name="title_deleteserver">Delete Server</string>
    <string name="qmsg_deleteserver">Delete server %%Server?</string>
    <string name="lb_ok">OK</string>
    <string name="lb_cancel">Cancel</string>
    <string name="title_modify_server">Modify Server</string>
    <string name="title_newserver">New Server</string>
    <string name="msg_nonetwork">Not connected to a network!</string>
    <string name="title_modify_switch">Modify Switch</string>
    <string name="title_new_switch">New Switch</string>
    <string name="msg_nochange">Nothing changed!</string>
    <string name="msg_seqmandatory">Sequence Number is mandatory!</string>
    <string name="msg_seqinteger">Sequence Number must be a positive integer!</string>
    <string name="msg_namewrong">Name incorrect!</string>
    <string name="msg_pausemandatory">Pause is mandatory!</string>
    <string name="msg_pauseinteger">Pause must be a positive integer (max 999)!</string>
    <string name="msg_iperror">IP not correct!</string>
    <string name="msg_activeincomplete">Active only possible with fully specified switch!</string>
    <string name="msg_switchok">Switch OK!</string>
    <string name="msg_unknownerror">Unknown error!</string>
    <string name="msg_nolightserver">No Lights Server found!</string>
    <string name="msg_noaction">No action!</string>
    <string name="msg_actionfailed">Action(s) failed!</string>
    <string name="msg_actionsucceed">Action(s) succeeded!</string>
    <string name="msg_actionpartsucceed">Action(s) partly succeeded!</string>
    <string name="title_refresh">Refresh</string>
    <string name="title_more">More...</string>
    <string name="title_settings">Settings</string>
    <string name="title_servers">Servers</string>
    <string name="title_switches">Switches</string>
    <string name="title_process">Process</string>
    <string name="title_delete">Delete</string>
    <string name="title_manage_switches">Manage Switches</string>
    <string name="title_manage_servers">Manage Servers</string>
    <string name="title_manage_settings">Manage Settings</string>
    <string name="msg_button_set">Button set!</string>
    <string name="msg_Insuff_perm">Insufficient permissions!</string>
    <string name="msg_long_format">Format error longitude</string>
    <string name="msg_latt_format">Format error lattitude</string>
    <string name="msg_long_range">Range error longitude (-180 ... 180)</string>
    <string name="msg_latt_range">Range error lattitude (-90 ... 90)</string>
    <string name="msg_period_format">Format error period</string>
    <string name="msg_period_range">Range error period (0 ... 120)</string>
    <string name="msg_treshold_format">Format error treshold</string>
    <string name="msg_treshold_range">Range error treshold (0 ... 10,000)</string>
    <string name="msg_interval_format">Format error interval</string>
    <string name="msg_interval_range">Range error interval (10 ... 300)</string>
    <string name="msg_repeat_format">Format error repeat</string>
    <string name="msg_repeat_range">Range error repeat (0 ... 10)</string>
    <string name="msg_update_OK">Update successfull</string>
    <string name="msg_update_NOK">Update failed</string>
    <string name="msg_int_error">Internal error!</string>
    <string name="msg_comm_error">Communication error!</string>
    <string name="msg_server_error">Server error!</string>
    <string name="msg_switch_updated">Switch updated</string>
    <string name="msg_switch_added">Switch added</string>
    <string name="msg_switch_deleted">Switch deleted</string>
</resources>
