<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">
    <item android:id="@+id/action_refresh"
        android:title="@string/title_refresh"
        android:icon="@mipmap/ic_menu_refresh"
        android:onClick="sRefresh"
        android:showAsAction="always"
        tools:ignore="AppCompatResource"/>
    <item android:id="@+id/action_ok"
        android:title="@string/title_process"
        android:icon="@mipmap/check_ok"
        android:onClick="sProcess"
        android:showAsAction="always"
        tools:ignore="AppCompatResource"/>
    <item android:id="@+id/action_delete"
        android:title="@string/title_delete"
        android:icon="@mipmap/ic_menu_delete"
        android:onClick="sDelete"
        android:showAsAction="always"
        tools:ignore="AppCompatResource"/>
</menu>