<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/lbName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:layout_marginTop="7dp"
            android:paddingEnd="5dp"
            android:text="@string/lb_server" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="Naampje"
            android:id="@+id/txtName"
            android:clickable="false"
            android:layout_weight="1"
            android:layout_marginTop="7dp"
            android:layout_marginBottom="2dp" />

        <TextView
            android:id="@+id/lbNet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:layout_marginTop="7dp"
            android:paddingEnd="5dp"
            android:text="@string/lb_network" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="Network"
            android:id="@+id/txtNet"
            android:clickable="false"
            android:layout_weight="1"
            android:layout_marginTop="7dp"
            android:layout_marginBottom="2dp" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/lbIPaddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="7dp"
            android:layout_marginTop="2dp"
            android:paddingEnd="5dp"
            android:text="@string/lb_ipaddress" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="1.2.3.4"
            android:id="@+id/txtIPaddress"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="7dp"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/lbPort"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="7dp"
            android:layout_marginTop="2dp"
            android:paddingEnd="5dp"
            android:text="@string/lb_port" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="8080"
            android:id="@+id/txtPort"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="7dp"
            android:layout_weight="1" />
    </LinearLayout>

</LinearLayout>