    <LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin" tools:context="jb.light.control.LightControl"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:weightSum="1"
        android:id="@+id/linearLayout">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/lbSunset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:text="@string/lb_sunset"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="20:41"
                android:id="@+id/txtSunset"
                android:layout_gravity="center_horizontal"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:paddingStart="10dp"
                android:singleLine="true" />

            <TextView
                android:id="@+id/lbReading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="20dp"
                android:singleLine="true"
                android:text="@string/lb_reading"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:visibility="visible" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="35"
                android:id="@+id/txtReading"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:paddingStart="10dp"
                android:visibility="visible"
                android:singleLine="true" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/lbLightOff"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lb_lightsoff"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/txtLightOff"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:clickable="true"
                android:enabled="true"
                android:nestedScrollingEnabled="false"
                android:onClick="sSetTimeLightOff"
                android:paddingStart="10dp"
                android:text="23:30"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </LinearLayout>

        <CheckBox
            android:id="@+id/chkAll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:onClick="sSelectAll"
            android:text="@string/chk_selall" />

        <ListView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:id="@+id/lstSwitches"
            android:visibility="visible" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/ibtnSelectOn"
                android:longClickable="false"
                android:src="@mipmap/light_on"
                android:onClick="sSelectOn"
                android:layout_weight="1" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/ibtnSelectOff"
                android:src="@mipmap/light_off"
                android:onClick="sSelectOff"
                android:layout_weight="1" />
        </LinearLayout>
    </LinearLayout>
